--- a/front/index.html
+++ b/front/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Retro Rewind Status</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=0.8, minimum-scale=0.8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="text/javascript" src="index.js"></script>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
@@ -14,19 +15,30 @@
 </head>
 
 <body>
-    <h1>Retro Rewind Status</h1>
-    <h3>Players Online: Unknown</h3>
+    <h1 class="title">Retro Rewind Status</h1>
+    <h3 class="player-count">?? Players Online</h3>
+    <div>
+        <hr />
+    </div>
 
-    <h2>Rooms</h2>
-    <table id="rooms-list">
-        <thead>
-            <tr>
-                <td>Players</td>
-                <td>Access</td>
-                <td>Time Online</td>
-                <td>ID</td>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+    <h2 class="rooms-header">Rooms</h2>
+    <div class="scroll">
+        <table id="rooms-list">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Players</th>
+                    <th>Type</th>
+                    <th>Access</th>
+                    <th>Time Online</th>
+                    <th>ID</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+
+    <div>
+        <hr />
+    </div>
 </body>
