Rename 'Time Online' to 'Uptime'

--- a/front/index.html
+++ b/front/index.html
@@ -30,7 +30,7 @@
                     <th>Players</th>
                     <th>Type</th>
                     <th>Access</th>
-                    <th>Time Online</th>
+                    <th>Uptime</th>
                     <th>ID</th>
                 </tr>
             </thead>
