Change layout again

--- a/front/index.html
+++ b/front/index.html
@@ -16,29 +16,10 @@
 
 <body>
     <h1 class="title">Retro Rewind Status</h1>
-    <h3 class="player-count">?? Players Online</h3>
+    <h3 id="player-count">?? Players Online</h3>
     <div>
         <hr />
     </div>
 
-    <h2 class="rooms-header">Rooms</h2>
-    <div class="scroll">
-        <table id="rooms-list">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>Players</th>
-                    <th>Type</th>
-                    <th>Access</th>
-                    <th>Uptime</th>
-                    <th>ID</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-    </div>
-
-    <div>
-        <hr />
-    </div>
+    <div class="scroll"></div>
 </body>
