--- a/front/index.html
+++ b/front/index.html
@@ -16,10 +16,30 @@
 
 <body>
     <h1 class="title">Retro Rewind Status</h1>
-    <h3 id="player-count">?? Players Online</h3>
+    <h3 id="player-count-header">
+        <Span class="count-text">
+            <Span id="player-count">??</Span> Players
+        </Span>
+        Online Across
+        <Span class="count-text">
+            <Span id="room-count">??</Span> Rooms
+        </Span>
+    </h3>
     <div>
         <hr />
     </div>
 
     <div class="scroll"></div>
+
+    <div class="footer">
+        <ul>
+            <li><a class="footer-link" href="https://wiki.tockdom.com/wiki/Retro_Rewind">Retro Rewind</a></li>
+            <li><a class="footer-link" href="https://www.fontsquirrel.com/fonts/rubik">Rubik Font</a></li>
+            <li><a class="footer-link" href="https://wiki.tockdom.com/wiki/CTMKF">Chadderz' Terrible Mario Kart Font</a>
+            <li><a class="footer-link" href="http://zplwii.xyz/api/groups">API Endpoint</a></li>
+            <li><a class="footer-link" href="https://github.com/ppebb/RetroRewindRooms">Page Source</a></li>
+            </li>
+        </ul>
+    </div>
+
 </body>
