Show message if no server data is present

--- a/front/index.html
+++ b/front/index.html
@@ -37,6 +37,12 @@
         <hr />
     </div>
 
+    <div id="no-data" style="display: none;">
+        <span>No room data found! <br />
+            The Retro Rewind server may be down at this time! <br />
+            Use the arrows to the left or right to view historical data...</span>
+    </div>
+
     <div class="scroll"></div>
 
     <div class="footer">
