Update server URL

--- a/front/index.html
+++ b/front/index.html
@@ -51,7 +51,7 @@
             <li><a class="footer-link" href="https://www.fontsquirrel.com/fonts/rubik">Rubik Font</a></li>
             <li><a class="footer-link" href="https://wiki.tockdom.com/wiki/CTMKF">Chadderz' Terrible Mario Kart
                     Font</a>
-            <li><a class="footer-link" href="http://zplwii.xyz/api/groups">API Endpoint</a></li>
+            <li><a class="footer-link" href="http://rwfc.net/api/groups">API Endpoint</a></li>
             <li><a class="footer-link" href="https://github.com/ppebb/RetroRewindRooms">Page Source</a></li>
         </ul>
     </div>
